fixed map flickering

--- a/src/index.css
+++ b/src/index.css
@@ -198,6 +198,7 @@ aside h2 {
     height: 300px;
     overflow:hidden;
     overflow-y:scroll;
+    width: 100%;
 }
 ::-webkit-scrollbar {
   width: 10px;
